<resources>
    <string name="app_name">Lgoon</string>
    <string name="title_activity_register">Register</string>
    <string name="password_himt">Password</string>
    <string name="email_hint">Email</string>
    <string name="full_name_hint">Full Name</string>
    <string name="school_name_hint">School Name</string>
    <string name="term_and_condition">Term and condition</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender_select">Gender</string>
    <string name="roll_no_hint">Roll NUmber</string>
    <string name="dialog_fire_missiles">select option</string>
    <string name="view_dialog">view</string>
    <string name="edit_dialog">Edit</string>
    <string name="delete_dialog">Delete</string>
    <string name="view">view</string>
</resources>
